update by bugleesir

--- a/_posts/2024-8-1-面试学习.md
+++ b/_posts/2024-8-1-面试学习.md
@@ -157,13 +157,14 @@ title: 面试题目
   - [9.对象如何访问定位？](#9对象如何访问定位)
     - [1. 句柄访问（Handle Access）](#1-句柄访问handle-access)
     - [2. 直接指针访问（Direct Pointer Access）](#2-直接指针访问direct-pointer-access)
-  - [10.说说内存溢出（OOM）的原因？](#10说说内存溢出oom的原因)
-    - [1. 堆内存（Heap Memory）](#1-堆内存heap-memory)
-    - [2. 方法区（Method Area）/元空间（Metaspace）](#2-方法区method-area元空间metaspace)
-    - [3. 栈内存（Stack Memory）](#3-栈内存stack-memory)
-    - [4. 直接内存（Direct Memory）](#4-直接内存direct-memory)
-    - [总结-10](#总结-10)
-  - [11.内存泄漏可能由哪些原因导致呢？](#11内存泄漏可能由哪些原因导致呢)
+  - [10.说说内存溢出（OOM）和内存泄漏（Leak Memory）的原因？](#10说说内存溢出oom和内存泄漏leak-memory的原因)
+    - [内存溢出是什么](#内存溢出是什么)
+      - [1. 堆内存（Heap Memory）](#1-堆内存heap-memory)
+      - [2. 方法区（Method Area）/元空间（Metaspace）](#2-方法区method-area元空间metaspace)
+      - [3. 栈内存（Stack Memory）](#3-栈内存stack-memory)
+      - [4. 直接内存（Direct Memory）](#4-直接内存direct-memory)
+      - [总结-10-1](#总结-10-1)
+    - [内存泄漏可能由哪些原因导致呢？](#内存泄漏可能由哪些原因导致呢)
   - [11.Java 堆的内存分区了解吗？](#11java-堆的内存分区了解吗)
     - [1. 新生代（Young Generation）](#1-新生代young-generation)
     - [2. 老年代（Old Generation）](#2-老年代old-generation)
@@ -204,6 +205,85 @@ title: 面试题目
       - [3. Mixed GC](#3-mixed-gc)
       - [4. Full GC](#4-full-gc)
       - [总结-15-3](#总结-15-3)
+    - [垃圾收集器](#垃圾收集器)
+      - [1. Serial 收集器](#1-serial-收集器)
+      - [2. ParNew 收集器](#2-parnew-收集器)
+      - [3. Parallel 收集器](#3-parallel-收集器)
+      - [4. CMS 收集器](#4-cms-收集器)
+      - [5. G1 收集器](#5-g1-收集器)
+      - [6. ZGC 收集器](#6-zgc-收集器)
+      - [7. Shenandoah 收集器](#7-shenandoah-收集器)
+      - [总结-15-4](#总结-15-4)
+  - [16.有了 CMS，为什么还要引入 G1？](#16有了-cms为什么还要引入-g1)
+  - [16.有哪些常用的命令行性能监控和故障处理工具？](#16有哪些常用的命令行性能监控和故障处理工具)
+  - [17.了解哪些可视化的性能监控和故障处理工具？](#17了解哪些可视化的性能监控和故障处理工具)
+    - [1. VisualVM](#1-visualvm)
+    - [2. JConsole](#2-jconsole)
+    - [3. Java Mission Control (JMC)](#3-java-mission-control-jmc)
+    - [4. Eclipse Memory Analyzer (MAT)](#4-eclipse-memory-analyzer-mat)
+    - [5. Grafana + Prometheus](#5-grafana--prometheus)
+    - [总结-17](#总结-17)
+  - [18.JVM 的常见参数配置知道哪些？](#18jvm-的常见参数配置知道哪些)
+    - [1. 内存设置参数](#1-内存设置参数)
+    - [2. 垃圾回收参数](#2-垃圾回收参数)
+    - [3. 性能调优参数](#3-性能调优参数)
+    - [4. 调试和诊断参数](#4-调试和诊断参数)
+    - [总结-18](#总结-18)
+  - [19.线上服务 CPU 占用过高怎么排查？](#19线上服务-cpu-占用过高怎么排查)
+    - [1. 使用操作系统工具查看 CPU 使用情况](#1-使用操作系统工具查看-cpu-使用情况)
+    - [2. 使用 `jps` 和 `jstack` 查看 Java 线程的 CPU 使用情况](#2-使用-jps-和-jstack-查看-java-线程的-cpu-使用情况)
+    - [3. 使用 `top` 和 `jstack` 结合分析](#3-使用-top-和-jstack-结合分析)
+    - [4. 使用 `jstat` 查看垃圾回收情况](#4-使用-jstat-查看垃圾回收情况)
+    - [5. 使用 `jmap` 查看内存使用情况](#5-使用-jmap-查看内存使用情况)
+    - [6. 使用 `Java Mission Control` 和 `VisualVM` 进行深入分析](#6-使用-java-mission-control-和-visualvm-进行深入分析)
+    - [总结-19](#总结-19)
+  - [20.内存飙高问题怎么排查？](#20内存飙高问题怎么排查)
+  - [21.频繁 minor gc 怎么办？](#21频繁-minor-gc-怎么办)
+  - [22.频繁 Full GC 怎么办？](#22频繁-full-gc-怎么办)
+    - [该怎么排查 Full GC 频繁问题？](#该怎么排查-full-gc-频繁问题)
+  - [23.有没有处理过内存泄漏问题？是如何定位的？](#23有没有处理过内存泄漏问题是如何定位的)
+  - [24.有没有处理过 OOM 问题？](#24有没有处理过-oom-问题)
+  - [25.了解类的加载机制吗？](#25了解类的加载机制吗)
+  - [26.类加载器有哪些？](#26类加载器有哪些)
+    - [1. 启动类加载器（Bootstrap ClassLoader）](#1-启动类加载器bootstrap-classloader)
+    - [2. 扩展类加载器（Extension ClassLoader）](#2-扩展类加载器extension-classloader)
+    - [3. 应用程序类加载器（Application ClassLoader）](#3-应用程序类加载器application-classloader)
+    - [4. 自定义类加载器（Custom ClassLoader）](#4-自定义类加载器custom-classloader)
+    - [总结-26](#总结-26)
+  - [27.能说一下类的生命周期吗？](#27能说一下类的生命周期吗)
+    - [1. 加载（Loading）](#1-加载loading)
+    - [2. 验证（Verification）](#2-验证verification)
+    - [3. 准备（Preparation）](#3-准备preparation)
+    - [4. 解析（Resolution）](#4-解析resolution)
+    - [5. 初始化（Initialization）](#5-初始化initialization)
+    - [6. 使用（Using）](#6-使用using)
+    - [7. 卸载（Unloading）](#7-卸载unloading)
+    - [总结-27](#总结-27)
+  - [28.什么是双亲委派模型？](#28什么是双亲委派模型)
+  - [29.为什么要用双亲委派模型？](#29为什么要用双亲委派模型)
+  - [30.如何破坏双亲委派机制？](#30如何破坏双亲委派机制)
+    - [示例：自定义类加载器](#示例自定义类加载器)
+    - [解释](#解释)
+    - [总结-30](#总结-30)
+  - [31.Tomcat 的类加载机制了解吗？](#31tomcat-的类加载机制了解吗)
+    - [1. 启动类加载器（Bootstrap  ClassLoader）](#1-启动类加载器bootstrap--classloader)
+    - [2. 系统类加载器（System ClassLoader）](#2-系统类加载器system-classloader)
+    - [3. 公共类加载器（Common ClassLoader）](#3-公共类加载器common-classloader)
+    - [4. Web 应用程序类加载器（WebappClassLoader）](#4-web-应用程序类加载器webappclassloader)
+    - [5. 自定义类加载器（Custom ClassLoader）](#5-自定义类加载器custom-classloader)
+    - [类加载器的层次结构](#类加载器的层次结构)
+    - [类加载顺序](#类加载顺序)
+  - [32.你觉得应该怎么实现一个热部署功能？](#32你觉得应该怎么实现一个热部署功能)
+    - [1. 监控文件变化](#1-监控文件变化)
+    - [2. 卸载旧类](#2-卸载旧类)
+    - [3. 加载新类](#3-加载新类)
+    - [4. 重启应用](#4-重启应用)
+    - [总结-32](#总结-32)
+  - [33.解释执行和编译执行的区别?](#33解释执行和编译执行的区别)
+    - [解释执行](#解释执行)
+    - [编译执行](#编译执行)
+    - [Java 的混合模式](#java-的混合模式)
+    - [总结-33](#总结-33)
 
 <!-- /TOC -->
 
@@ -3885,7 +3965,9 @@ public class MyObject {
 
 HotSpot 虚拟机主要使用直接指针来进行对象访问。
 
-### 10.说说内存溢出（OOM）的原因？
+### 10.说说内存溢出（OOM）和内存泄漏（Leak Memory）的原因？
+
+#### 内存溢出是什么
 
 在 Java 中，OOM（OutOfMemoryError）错误表示 JVM 无法再为应用程序分配所需的内存。OOM 错误可能发生在以下几个内存区域：
 
@@ -3894,7 +3976,7 @@ HotSpot 虚拟机主要使用直接指针来进行对象访问。
 3. **栈内存（Stack Memory）**
 4. **直接内存（Direct Memory）**
 
-#### 1. 堆内存（Heap Memory）
+##### 1. 堆内存（Heap Memory）
 
 **描述**：
 
@@ -3919,7 +4001,7 @@ public class HeapOOM {
 }
 ```
 
-#### 2. 方法区（Method Area）/元空间（Metaspace）
+##### 2. 方法区（Method Area）/元空间（Metaspace）
 
 **描述**：
 
@@ -3951,7 +4033,7 @@ public class MetaspaceOOM {
 }
 ```
 
-#### 3. 栈内存（Stack Memory）
+##### 3. 栈内存（Stack Memory）
 
 **描述**：
 
@@ -3976,7 +4058,7 @@ public class StackOverflow {
 }
 ```
 
-#### 4. 直接内存（Direct Memory）
+##### 4. 直接内存（Direct Memory）
 
 **描述**：
 
@@ -4001,7 +4083,7 @@ public class DirectMemoryOOM {
 }
 ```
 
-#### 总结-10
+##### 总结-10-1
 
 - **堆内存（Heap Memory）**：对象过多、内存泄漏、大对象分配。
 - **方法区（Method Area）/元空间（Metaspace）**：类加载过多、常量池过大。
@@ -4010,7 +4092,7 @@ public class DirectMemoryOOM {
 
 OOM 错误通常是由于内存分配超过了 JVM 或系统的限制，了解这些内存区域及其可能的 OOM 原因，有助于在开发和调试过程中更好地管理和优化内存使用。
 
-### 11.内存泄漏可能由哪些原因导致呢？
+#### 内存泄漏可能由哪些原因导致呢？
 
 内存泄漏可能的原因有很多种，比如说静态集合类引起内存泄漏、单例模式、数据连接、IO、Socket 等连接、变量不合理的作用域、hash 值发生变化、ThreadLocal 使用不当等。
 
@@ -4559,3 +4641,1195 @@ public class GCRootsExample {
 - **Major GC / Old GC**：主要针对老年代进行垃圾回收，频率较低，但回收速度较慢。
 - **Mixed GC**：G1 垃圾回收器的一种回收策略，回收新生代和部分老年代，结合了 Minor GC 和 Major GC 的优点。
 - **Full GC**：一次全堆的垃圾回收，回收新生代、老年代和元空间，频率最低，但回收速度最慢，对应用程序的性能影响最大。
+
+#### 垃圾收集器
+
+JVM 提供了多种垃圾收集器，每种垃圾收集器都有其独特的特点和适用场景。以下是一些常见的垃圾收集器：
+
+##### 1. Serial 收集器
+
+**描述**：
+
+- Serial 收集器是最基本的垃圾收集器，使用单线程进行垃圾回收。
+- 适用于单线程环境或小型应用。
+
+**特点**：
+
+- 简单高效，适用于单核 CPU。
+- 在进行垃圾回收时，会暂停所有应用程序线程（Stop The World）。
+
+**适用场景**：
+
+- 单线程环境或小型应用。
+
+##### 2. ParNew 收集器
+
+**描述**：
+
+- ParNew 收集器是 Serial 收集器的多线程版本，使用多线程进行垃圾回收。
+- 主要用于新生代的垃圾回收。
+
+**特点**：
+
+- 多线程并行回收，适用于多核 CPU。
+- 与 CMS 收集器配合使用。
+
+**适用场景**：
+
+- 多线程环境，适用于新生代的垃圾回收。
+
+##### 3. Parallel 收集器
+
+**描述**：
+
+- Parallel 收集器也称为吞吐量收集器，使用多线程进行垃圾回收，主要关注吞吐量。
+- 适用于新生代和老年代的垃圾回收。
+- 吞吐量 = 运行用户代码的时间/（运行垃圾收集的时间+运行用户代码的时间）
+**特点**：
+
+- 多线程并行回收，适用于多核 CPU。
+- 关注吞吐量，适用于后台计算等对响应时间要求不高的场景。
+
+**适用场景**：
+
+- 需要高吞吐量的应用，如后台计算、批处理等。
+
+##### 4. CMS 收集器
+
+**描述**：
+
+- CMS（Concurrent Mark-Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器。
+- 主要用于老年代的垃圾回收。
+
+**特点**：
+
+- 并发回收，减少停顿时间。
+- 适用于对响应时间要求高的应用，如 Web 服务器。
+- CMS（Concurrent Mark Sweep）主要使用了标记-清除算法进行垃圾收集，分 4 大步：
+  - 初始标记（Initial Mark）：标记所有从 GC Roots 直接可达的对象，这个阶段需要 STW，但速度很快。
+  - 并发标记（Concurrent Mark）：从初始标记的对象出发，遍历所有对象，标记所有可达的对象。这个阶段是并发进行的，STW。
+  - 重新标记（Remark）：完成剩余的标记工作，包括处理并发阶段遗留下来的少量变动，这个阶段通常需要短暂的 STW 停顿。
+  - 并发清除（Concurrent Sweep）：清除未被标记的对象，回收它们占用的内存空间。
+  
+**remark的过程**:
+
+remark 阶段通常会结合三色标记法来执行，确保在并发标记期间所有存活对象都被正确标记。目的是修正并发标记阶段中可能遗漏的对象引用变化。
+
+在 remark 阶段，垃圾收集器会停止应用线程（STW），以确保在这个阶段不会有引用关系的进一步变化。这种暂停通常很短暂。remark 阶段主要包括以下操作：
+
+- 1.处理写屏障记录的引用变化：在并发标记阶段，应用程序可能会更新对象的引用（比如一个黑色对象新增了对一个白色对象的引用），这些变化通过写屏障记录下来。在 remark 阶段，GC 会处理这些记录，确保所有可达对象都正确地标记为灰色或黑色。
+- 2.扫描灰色对象：再次遍历灰色对象，处理它们的所有引用，确保引用的对象正确标记为灰色或黑色。
+- 3.清理：确保所有引用关系正确处理后，灰色对象标记为黑色，白色对象保持不变。这一步完成后，所有存活对象都应当是黑色的。
+
+**三色标记法**：
+
+白色（White）：尚未访问的对象。垃圾回收结束后，仍然为白色的对象会被认为是不可达的对象，可以回收。
+
+灰色（Gray）：已经访问到但未标记完其引用的对象。灰色对象是需要进一步处理的。
+
+黑色（Black）：已经访问到并且其所有引用对象都已经标记过。黑色对象是完全处理过的，不需要再处理。
+三色标记法的工作流程：
+
+①、初始标记（Initial Marking）：从 GC Roots 开始，标记所有直接可达的对象为灰色。
+
+②、并发标记（Concurrent Marking）：在此阶段，标记所有灰色对象引用的对象为灰色，然后将灰色对象自身标记为黑色。这个过程是并发的，和应用线程同时进行。
+
+此阶段的一个问题是，应用线程可能在并发标记期间修改对象的引用关系，导致一些对象的标记状态不准确。
+
+③、重新标记（Remarking）：重新标记阶段的目标是处理并发标记阶段遗漏的引用变化。为了确保所有存活对象都被正确标记，remark 需要在 STW 暂停期间执行。
+
+④、使用写屏障（Write Barrier）来捕捉并发标记阶段应用线程对对象引用的更新。通过遍历这些更新的引用来修正标记状态，确保遗漏的对象不会被错误地回收。
+
+**适用场景**：
+
+- 对响应时间要求高的应用，如 Web 服务器。
+
+##### 5. G1 收集器
+
+**描述**：
+
+- G1（Garbage First）收集器是一种面向服务端应用的垃圾收集器，适用于多核 CPU 和大内存环境。
+- 将堆划分为多个区域（Region），使用并行和并发的方式进行垃圾回收。这种区域化管理使得 G1 可以更灵活地进行垃圾收集，只回收部分区域而不是整个新生代或老年代。
+- G1（Garbage-First Garbage Collector）*在 JDK 1.7 时引入，在 JDK 9 时取代 CMS 成为了默认的垃圾收集器*。
+
+**运行过程**：
+
+①、并发标记，G1 通过并发标记的方式找出堆中的垃圾对象。并发标记阶段与应用线程同时执行，不会导致应用线程暂停。
+
+②、混合收集，在并发标记完成后，G1 会计算出哪些区域的回收价值最高（也就是包含最多垃圾的区域），然后优先回收这些区域。这种回收方式包括了部分新生代区域和老年代区域。
+
+选择回收成本低而收益高的区域进行回收，可以提高回收效率和减少停顿时间。
+
+③、可预测的停顿，G1 在垃圾回收期间仍然需要「Stop the World」。不过，G1 在停顿时间上添加了预测机制，用户可以 JVM 启动时指定期望停顿时间，G1 会尽可能地在这个时间内完成垃圾回收。
+
+**特点**：
+
+- 并行和并发回收，减少停顿时间。
+- 适用于大内存和多核 CPU 环境。
+- 支持预测停顿时间。
+
+**适用场景**：
+
+- 大内存和多核 CPU 环境，适用于对响应时间和吞吐量都有要求的应用。
+
+##### 6. ZGC 收集器
+
+**描述**：
+
+- ZGC（Z Garbage Collector）是一种低延迟垃圾收集器，适用于大内存和低延迟要求的应用。
+- 使用并发标记和并发压缩技术，减少停顿时间。
+
+**特点**：
+
+- 低延迟，停顿时间通常在 10 毫秒以内。
+- 适用于大内存和低延迟要求的应用。
+
+**适用场景**：
+
+- 大内存和低延迟要求的应用，如金融交易系统。
+
+##### 7. Shenandoah 收集器
+
+**描述**：
+
+- Shenandoah 收集器是一种低延迟垃圾收集器，适用于大内存和低延迟要求的应用。
+- 使用并发标记和并发压缩技术，减少停顿时间。
+
+**特点**：
+
+- 低延迟，停顿时间通常在 10 毫秒以内。
+- 适用于大内存和低延迟要求的应用。
+
+**适用场景**：
+
+- 大内存和低延迟要求的应用，如金融交易系统。
+
+##### 总结-15-4
+
+- **Serial 收集器**：单线程垃圾收集器，适用于单线程环境或小型应用。
+- **ParNew 收集器**：多线程版本的 Serial 收集器，适用于多线程环境，主要用于新生代的垃圾回收。
+- **Parallel 收集器**：关注吞吐量的多线程垃圾收集器，适用于需要高吞吐量的应用。
+- **CMS 收集器**：并发标记-清除垃圾收集器，适用于对响应时间要求高的应用。
+- **G1 收集器**：面向服务端应用的垃圾收集器，适用于大内存和多核 CPU 环境。
+- **ZGC 收集器**：低延迟垃圾收集器，适用于大内存和低延迟要求的应用。
+- **Shenandoah 收集器**：低延迟垃圾收集器，适用于大内存和低延迟要求的应用。
+
+### 16.有了 CMS，为什么还要引入 G1？
+
+| 特性 | CMS | G1 |
+| --- | --- | --- |
+| 设计目标 | 低停顿时间 | 可预测的停顿时间 |
+| 并发性 | 是 | 是 |
+| 内存碎片 | 是，容易产生碎片 | 否，通过区域划分和压缩减少碎片 |
+| 收集代数 | 年轻代和老年代 | 整个堆，但区分年轻代和老年代 |
+| 并发阶段 | 并发标记、并发清理 | 并发标记、并发清理、并发回收 |
+| 停顿时间预测 | 较难预测 | 可配置停顿时间目标 |
+| 容易出现的问题 | 内存碎片、Concurrent Mode Failure | 较少出现长时间停顿 |
+
+CMS 适用于对延迟敏感的应用场景，主要目标是减少停顿时间，但容易产生内存碎片。G1 则提供了更好的停顿时间预测和内存压缩能力，适用于大内存和多核处理器环境。
+
+### 16.有哪些常用的命令行性能监控和故障处理工具？
+
+**操作系统工具**：
+
+- top：显示系统整体资源使用情况
+- vmstat：监控内存和 CPU
+- iostat：监控 IO 使用
+- netstat：监控网络使用
+
+**JDK 性能监控工具**：
+
+- jps：虚拟机进程查看
+- jstat：虚拟机运行时信息查看
+- jinfo：虚拟机配置查看
+- jmap：内存映像（导出）
+- jhat：堆转储快照分析
+- jstack：Java 堆栈跟踪
+- jcmd：实现上面除了 jstat 外所有命令的功能
+
+### 17.了解哪些可视化的性能监控和故障处理工具？
+
+除了命令行工具，Java 生态系统中还有许多强大的可视化工具，用于性能监控和故障处理。这些工具提供了图形化界面，使得监控和诊断更加直观和便捷。以下是一些常用的可视化工具：
+
+#### 1. VisualVM
+
+**描述**：
+
+- VisualVM 是一个集成的性能监控和故障处理工具，提供了对 Java 应用程序的实时监控和分析功能。
+- 它可以监控 CPU、内存、线程、垃圾回收等信息，并支持生成和分析堆转储、线程转储等。
+
+**特点**：
+
+- 实时监控和分析 Java 应用程序。
+- 支持生成和分析堆转储、线程转储。
+- 提供插件扩展功能。
+
+**使用方法**：
+
+- VisualVM 通常随 JDK 一起提供，可以在 JDK 的 `bin` 目录下找到 `jvisualvm` 可执行文件。
+
+#### 2. JConsole
+
+**描述**：
+
+- JConsole 是 JDK 提供的一个基于 JMX（Java Management Extensions）的监控工具，用于监控和管理 Java 应用程序。
+- 它可以监控内存使用、线程活动、类加载、垃圾回收等信息。
+
+**特点**：
+
+- 基于 JMX，支持远程监控。
+- 提供实时监控和管理功能。
+- 界面简单直观。
+
+**使用方法**：
+
+- JConsole 通常随 JDK 一起提供，可以在 JDK 的 `bin` 目录下找到 `jconsole` 可执行文件。
+
+#### 3. Java Mission Control (JMC)
+
+**描述**：
+
+- Java Mission Control 是 Oracle 提供的一个高级监控和分析工具，集成了 JFR（Java Flight Recorder）功能。
+- 它可以对 Java 应用程序进行低开销的监控和分析，适用于生产环境。
+
+**特点**：
+
+- 集成 JFR，提供低开销的监控和分析。
+- 支持生成和分析飞行记录（Flight Recording）。
+- 提供详细的性能分析和故障诊断功能。
+
+**使用方法**：
+
+- Java Mission Control 通常随 JDK 一起提供，可以在 JDK 的 `bin` 目录下找到 `jmc` 可执行文件。
+
+#### 4. Eclipse Memory Analyzer (MAT)
+
+**描述**：
+
+- Eclipse Memory Analyzer 是一个强大的堆转储分析工具，用于查找内存泄漏和分析内存使用情况。
+- 它可以生成详细的内存报告，帮助开发人员定位内存问题。
+
+**特点**：
+
+- 强大的堆转储分析功能。
+- 支持生成详细的内存报告。
+- 提供内存泄漏检测和分析功能。
+
+**使用方法**：
+
+- Eclipse Memory Analyzer 可以从 Eclipse 官方网站下载，并作为独立应用程序运行。
+
+#### 5. Grafana + Prometheus
+
+**描述**：
+
+- Grafana 和 Prometheus 是开源的监控和告警工具，常用于监控分布式系统和微服务架构。
+- Prometheus 负责数据采集和存储，Grafana 负责数据可视化。
+
+**特点**：
+
+- 强大的数据采集和存储功能。
+- 灵活的可视化和告警配置。
+- 支持多种数据源和插件扩展。
+
+**使用方法**：
+
+- 需要安装和配置 Prometheus 和 Grafana，可以从各自的官方网站下载并按照文档进行配置。
+
+#### 总结-17
+
+- **VisualVM**：集成的性能监控和故障处理工具，提供实时监控和分析功能。
+- **JConsole**：基于 JMX 的监控工具，支持远程监控和管理。
+- **Java Mission Control (JMC)**：高级监控和分析工具，集成 JFR 功能，适用于生产环境。
+- **Eclipse Memory Analyzer (MAT)**：强大的堆转储分析工具，用于查找内存泄漏和分析内存使用情况。
+- **Grafana + Prometheus**：开源的监控和告警工具，常用于监控分布式系统和微服务架构。
+
+通过这些可视化工具，开发人员和运维人员可以更加直观和便捷地监控和诊断 Java 应用程序的性能和故障，确保应用程序的稳定运行。
+
+### 18.JVM 的常见参数配置知道哪些？
+
+JVM 提供了许多参数配置选项，用于调整内存管理、垃圾回收、性能优化等方面。以下是一些常见的 JVM 参数配置：
+
+#### 1. 内存设置参数
+
+- **`-Xms`**：设置 JVM 初始堆内存大小。
+
+  ```sh
+  -Xms512m
+  ```
+
+- **`-Xmx`**：设置 JVM 最大堆内存大小。
+
+  ```sh
+  -Xmx1024m
+  ```
+
+- **`-Xmn`**：设置新生代内存大小。
+
+  ```sh
+  -Xmn256m
+  ```
+
+- **`-XX:PermSize`**：设置永久代初始大小（适用于 JDK 1.8 之前）。
+
+  ```sh
+  -XX:PermSize=128m
+  ```
+
+- **`-XX:MaxPermSize`**：设置永久代最大大小（适用于 JDK 1.8 之前）。
+
+  ```sh
+  -XX:MaxPermSize=256m
+  ```
+
+- **`-XX:MetaspaceSize`**：设置元空间初始大小（适用于 JDK 1.8 及之后）。
+
+  ```sh
+  -XX:MetaspaceSize=128m
+  ```
+
+- **`-XX:MaxMetaspaceSize`**：设置元空间最大大小（适用于 JDK 1.8 及之后）。
+
+  ```sh
+  -XX:MaxMetaspaceSize=256m
+  ```
+
+#### 2. 垃圾回收参数
+
+- **`-XX:+UseSerialGC`**：使用 Serial 垃圾收集器。
+
+  ```sh
+  -XX:+UseSerialGC
+  ```
+
+- **`-XX:+UseParallelGC`**：使用 Parallel 垃圾收集器（新生代）。
+
+  ```sh
+  -XX:+UseParallelGC
+  ```
+
+- **`-XX:+UseParallelOldGC`**：使用 Parallel Old 垃圾收集器（老年代）。
+
+  ```sh
+  -XX:+UseParallelOldGC
+  ```
+
+- **`-XX:+UseConcMarkSweepGC`**：使用 CMS 垃圾收集器。
+
+  ```sh
+  -XX:+UseConcMarkSweepGC
+  ```
+
+- **`-XX:+UseG1GC`**：使用 G1 垃圾收集器。
+
+  ```sh
+  -XX:+UseG1GC
+  ```
+
+- **`-XX:+UseZGC`**：使用 ZGC 垃圾收集器（适用于 JDK 11 及之后）。
+
+  ```sh
+  -XX:+UseZGC
+  ```
+
+- **`-XX:+UseShenandoahGC`**：使用 Shenandoah 垃圾收集器（适用于 JDK 12 及之后）。
+
+  ```sh
+  -XX:+UseShenandoahGC
+  ```
+
+#### 3. 性能调优参数
+
+- **`-XX:+AggressiveOpts`**：启用 JVM 的性能优化选项。
+
+  ```sh
+  -XX:+AggressiveOpts
+  ```
+
+- **`-XX:+UseCompressedOops`**：启用指针压缩（适用于 64 位 JVM）。
+
+  ```sh
+  -XX:+UseCompressedOops
+  ```
+
+- **`-XX:ParallelGCThreads`**：设置并行垃圾收集器的线程数。
+
+  ```sh
+  -XX:ParallelGCThreads=4
+  ```
+
+- **`-XX:ConcGCThreads`**：设置 CMS 垃圾收集器的并发线程数。
+
+  ```sh
+  -XX:ConcGCThreads=4
+  ```
+
+- **`-XX:InitiatingHeapOccupancyPercent`**：设置 G1 垃圾收集器的堆占用触发百分比。
+
+  ```sh
+  -XX:InitiatingHeapOccupancyPercent=45
+  ```
+
+#### 4. 调试和诊断参数
+
+- **`-XX:+PrintGC`**：打印垃圾回收日志。
+
+  ```sh
+  -XX:+PrintGC
+  ```
+
+- **`-XX:+PrintGCDetails`**：打印详细的垃圾回收日志。
+
+  ```sh
+  -XX:+PrintGCDetails
+  ```
+
+- **`-XX:+PrintGCTimeStamps`**：打印垃圾回收时间戳。
+
+  ```sh
+  -XX:+PrintGCTimeStamps
+  ```
+
+- **`-XX:+PrintHeapAtGC`**：在每次垃圾回收前后打印堆信息。
+
+  ```sh
+  -XX:+PrintHeapAtGC
+  ```
+
+- **`-Xloggc`**：将垃圾回收日志输出到指定文件。
+
+  ```sh
+  -Xloggc:gc.log
+  ```
+
+- **`-XX:+HeapDumpOnOutOfMemoryError`**：在发生 `OutOfMemoryError` 时生成堆转储文件。
+
+  ```sh
+  -XX:+HeapDumpOnOutOfMemoryError
+  ```
+
+- **`-XX:HeapDumpPath`**：指定堆转储文件的路径。
+
+  ```sh
+  -XX:HeapDumpPath=/path/to/dump
+  ```
+
+以下是一个示例，展示了如何配置 JVM 参数来优化性能和调试垃圾回收：
+
+```sh
+java -Xms512m -Xmx1024m -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=45 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/path/to/dump MyApplication
+```
+
+#### 总结-18
+
+- **内存设置参数**：用于配置堆内存、新生代、永久代/元空间的大小。
+- **垃圾回收参数**：用于选择和配置不同的垃圾收集器。
+- **性能调优参数**：用于启用性能优化选项和配置垃圾收集器的线程数。
+- **调试和诊断参数**：用于打印垃圾回收日志、生成堆转储文件等。
+
+通过合理配置 JVM 参数，可以优化 Java 应用程序的性能和稳定性，并在出现问题时进行有效的诊断和调试。
+
+### 19.线上服务 CPU 占用过高怎么排查？
+
+当线上服务出现 CPU 占用过高的问题时，可能会影响系统的性能和响应时间。以下是一些常见的排查步骤和方法：
+
+#### 1. 使用操作系统工具查看 CPU 使用情况
+
+首先，可以使用操作系统提供的工具查看系统的整体 CPU 使用情况和各个进程的 CPU 使用情况。
+
+- **Linux**：
+  - `top`：实时显示系统的 CPU 使用情况和各个进程的资源使用情况。
+  - `htop`：`top` 的增强版，提供更友好的界面和更多功能。
+  - `pidstat`：显示指定进程的 CPU 使用情况。
+  - `mpstat`：显示每个 CPU 的使用情况。
+
+  ```sh
+  top
+  htop
+  pidstat -p <pid> 1
+  mpstat -P ALL 1
+  ```
+
+- **Windows**：
+  - 任务管理器：按 `Ctrl + Shift + Esc` 打开任务管理器，查看 CPU 使用情况。
+  - 资源监视器：在任务管理器中选择“性能”选项卡，然后点击“打开资源监视器”。
+
+#### 2. 使用 `jps` 和 `jstack` 查看 Java 线程的 CPU 使用情况
+
+使用 `jps` 工具查看正在运行的 Java 进程的 PID，然后使用 `jstack` 工具生成线程堆栈信息。
+
+```sh
+jps
+jstack <pid> > thread_dump.txt
+```
+
+生成的线程堆栈信息可以帮助确定哪些线程占用了大量的 CPU 资源。
+
+#### 3. 使用 `top` 和 `jstack` 结合分析
+
+在 Linux 系统中，可以使用 `top` 命令查看哪个线程占用了大量的 CPU 资源，然后将线程 ID 转换为十六进制格式，并在 `jstack` 输出中查找对应的线程堆栈信息。
+
+```sh
+top -H -p <pid>  # 查看指定 Java 进程的线程 CPU 使用情况
+```
+
+找到占用 CPU 资源较高的线程 ID（`tid`），将其转换为十六进制格式（`printf "%x\n" <tid>`），然后在 `jstack` 输出中查找对应的线程堆栈信息。
+
+#### 4. 使用 `jstat` 查看垃圾回收情况
+
+使用 `jstat` 工具查看 JVM 的垃圾回收情况，判断是否是频繁的垃圾回收导致了 CPU 占用过高。
+
+```sh
+jstat -gc <pid> 1000 10  # 每秒显示一次垃圾回收信息，共显示10次
+```
+
+#### 5. 使用 `jmap` 查看内存使用情况
+
+使用 `jmap` 工具查看 JVM 的内存使用情况，判断是否是内存问题导致了 CPU 占用过高。
+
+```sh
+jmap -heap <pid>
+```
+
+#### 6. 使用 `Java Mission Control` 和 `VisualVM` 进行深入分析
+
+使用 Java Mission Control（JMC）和 VisualVM 等可视化工具进行深入分析，查看 CPU 使用情况、线程活动、垃圾回收等信息。
+
+- **Java Mission Control**：
+  - 启动 JMC，连接到目标 JVM，查看 CPU 使用情况、线程活动、垃圾回收等信息。
+
+- **VisualVM**：
+  - 启动 VisualVM，连接到目标 JVM，查看 CPU 使用情况、线程活动、垃圾回收等信息。
+
+以下是一个示例，展示了如何使用 `top` 和 `jstack` 结合分析 Java 线程的 CPU 使用情况：
+
+1. 使用 `top` 查看指定 Java 进程的线程 CPU 使用情况：
+
+   ```sh
+   top -H -p <pid>
+   ```
+
+2. 找到占用 CPU 资源较高的线程 ID（`tid`），将其转换为十六进制格式：
+
+   ```sh
+   printf "%x\n" <tid>
+   ```
+
+3. 使用 `jstack` 生成线程堆栈信息，并在输出中查找对应的线程堆栈信息：
+
+   ```sh
+   jstack <pid> > thread_dump.txt
+   ```
+
+#### 总结-19
+
+- **使用操作系统工具查看 CPU 使用情况**：如 `top`、`htop`、`pidstat`、任务管理器等。
+- **使用 `jps` 和 `jstack` 查看 Java 线程的 CPU 使用情况**：生成线程堆栈信息，确定占用 CPU 资源的线程。
+- **使用 `top` 和 `jstack` 结合分析**：查看线程 CPU 使用情况，并在堆栈信息中查找对应的线程。
+- **使用 `jstat` 查看垃圾回收情况**：判断是否是频繁的垃圾回收导致了 CPU 占用过高。
+- **使用 `jmap` 查看内存使用情况**：判断是否是内存问题导致了 CPU 占用过高。
+- **使用 Java Mission Control 和 VisualVM 进行深入分析**：查看 CPU 使用情况、线程活动、垃圾回收等信息。
+
+通过这些步骤和工具，可以有效地排查和解决线上服务 CPU 占用过高的问题，确保系统的性能和稳定性。
+
+### 20.内存飙高问题怎么排查？
+
+内存飚高一般是因为创建了大量的 Java 对象所导致的，如果持续飙高则说明垃圾回收跟不上对象创建的速度，或者内存泄漏导致对象无法回收。
+
+排查的方法主要分为以下几步：
+
+第一，先观察垃圾回收的情况，可以通过 jstat -gc PID 1000 查看 GC 次数和时间。
+
+或者 jmap -histo PID | head -20 查看堆内存占用空间最大的前 20 个对象类型。
+
+第二步，通过 jmap 命令 dump 出堆内存信息。
+
+第三步，使用可视化工具分析 dump 文件，比如说 VisualVM，找到占用内存高的对象，再找到创建该对象的业务代码位置，从代码和业务场景中定位具体问题。
+
+### 21.频繁 minor gc 怎么办？
+
+频繁的 Minor GC（也称为 Young GC）通常表示新生代中的对象频繁地被垃圾回收，可能是因为新生代空间设置过小，或者是因为程序中存在大量的短生命周期对象（如临时变量、方法调用中创建的对象等）。
+
+可以使用 GC 日志进行分析，查看 GC 的频率和耗时，找到频繁 GC 的原因。
+
+```shell
+-XX:+PrintGCDetails -Xloggc:gc.log
+```
+
+或者使用监控工具（如 VisualVM、jstat、jconsole 等）查看堆内存的使用情况，特别是新生代（Eden 和 Survivor 区）的使用情况。
+
+如果是因为新生代空间不足，可以通过 -Xmn 增加新生代的大小，减少新生代的填满速度。
+
+```shell
+java -Xmn256m your-app.jar
+```
+
+如果对象未能在 Survivor 区足够长时间存活，就会被晋升到老年代，可以通过 -XX:SurvivorRatio 参数调整 Eden 和 Survivor 的比例。默认比例是 8:1，表示 8 个空间用于 Eden，1 个空间用于 Survivor 区。
+
+```shell
+-XX:SurvivorRatio=6
+```
+
+这将减少 Eden 区的大小，增加 Survivor 区的大小，以确保对象在 Survivor 区中存活的时间足够长，避免过早晋升到老年代。
+
+### 22.频繁 Full GC 怎么办？
+
+Full GC 是指对整个堆内存（包括新生代和老年代）进行垃圾回收操作。Full GC 频繁会导致应用程序的暂停时间增加，从而影响性能。
+
+常见的原因有：
+
+- 大对象（如大数组、大集合）直接分配到老年代，导致老年代空间快速被占用。
+- 程序中存在内存泄漏，导致老年代的内存不断增加，无法被回收。比如 IO 资源未关闭。
+- 一些长生命周期的对象进入到了老年代，导致老年代空间不足。
+- 不合理的 GC 参数配置也导致 GC 频率过高。比如说新生代的空间设置过小。
+
+#### 该怎么排查 Full GC 频繁问题？
+
+假如是因为大对象直接分配到老年代导致的 Full GC 频繁，可以通过` -XX:PretenureSizeThreshold `参数设置大对象直接进入老年代的阈值。
+
+或者能不能将大对象拆分成小对象，减少大对象的创建。比如说分页。
+
+假如是因为内存泄漏导致的 Full GC 频繁，可以通过分析堆内存 dump 文件找到内存泄漏的对象，再找到内存泄漏的代码位置。
+
+假如是因为长生命周期的对象进入到了老年代，要及时释放资源，比如说 ThreadLocal、数据库连接、IO 资源等。
+
+假如是因为 GC 参数配置不合理导致的 Full GC 频繁，可以通过调整 GC 参数来优化 GC 行为。或者直接更换更适合的 GC 收集器，如 G1、ZGC 等。
+
+### 23.有没有处理过内存泄漏问题？是如何定位的？
+
+内存泄漏是指程序在运行过程中由于未能正确释放已分配的内存，导致内存无法被重用，从而引发内存耗尽等问题。
+
+常用的可视化监控工具有 JConsole、VisualVM、JProfiler、Eclipse Memory Analyzer (MAT)等。
+
+也可以使用 JDK 自带的 jmap、jstack、jstat 等命令行工具来配合内存泄露问题的排查。
+
+**严重的内存泄漏往往伴随频繁的 Full GC，所以排查内存泄漏问题时，可以从 Full GC 入手**。
+
+第一步，使用` jps -l `查看运行的 Java 进程 ID。
+
+第二步，使用`top -p [pid]`查看进程使用 CPU 和内存占用情况。
+
+第三步，使用` top -Hp [pid] `查看进程下的所有线程占用 CPU 和内存情况。
+
+第四步，抓取线程栈：`jstack -F 29452 > 29452.txt`，可以多抓几次做个对比。
+
+29452 为 pid，顺带作为文件名
+
+看看有没有线程死锁、死循环或长时间等待这些问题。
+
+第五步，可以使用`jstat -gcutil [pid] 5000 10`每隔 5 秒输出 GC 信息，输出 10 次，查看 YGC 和 Full GC 次数。
+
+通常会出现 YGC 不增加或增加缓慢，而 Full GC 增加很快。
+
+或使用` jstat -gccause [pid] 5000 `输出 GC 摘要信息。
+
+或使用` jmap -heap [pid] `查看堆的摘要信息，关注老年代内存使用是否达到阀值，若达到阀值就会执行 Full GC。
+
+如果发现 Full GC 次数太多，就很大概率存在内存泄漏了。
+
+第六步，生成 dump 文件，然后借助可视化工具分析哪个对象非常多，基本就能定位到问题根源了。
+
+执行命令` jmap -dump:format=b,file=heap.hprof 10025 `会输出进程 10025 的堆快照信息，保存到文件 heap.hprof 中。
+
+第七步，可以使用图形化工具分析，如 JDK 自带的 VisualVM，从菜单 > 文件 > 装入 dump 文件。
+
+然后在结果观察内存占用最多的对象，找到内存泄漏的源头。
+
+### 24.有没有处理过 OOM 问题？
+
+OOM，也就是内存溢出，Out of Memory，是指当程序请求分配内存时，由于没有足够的内存空间满足其需求，从而触发的错误。
+
+当发生 OOM 时，可以导出堆转储（Heap Dump）文件进行分析。如果 JVM 还在运行，可以使用 jmap 命令手动生成 Heap Dump 文件：
+
+```java
+jmap -dump:format=b,file=heap.hprof <pid>
+```
+
+生成 Heap Dump 文件后，可以使用 MAT、JProfiler 等工具进行分析，查看内存中的对象占用情况，找到内存泄漏的原因。
+
+如果生产环境的内存还有很多空余，可以适当增大堆内存大小，例如 -Xmx4g 参数。
+
+或者检查代码中是否存在内存泄漏，如未关闭的资源、长生命周期的对象等。
+
+之后，在本地进行压力测试，模拟高负载情况下的内存表现，确保修改有效，且没有引入新的问题。
+
+### 25.了解类的加载机制吗？
+
+JVM 的操作对象是 Class 文件，JVM 把 Class 文件中描述类的数据结构加载到内存中，并对数据进行校验、解析和初始化，最终形成可以被 JVM 直接使用的类型，这个过程被称为类加载机制。
+
+其中最重要的三个概念就是：类加载器、类加载过程和类加载器的双亲委派模型。
+
+- **类加载器**：负责加载类文件，将类文件加载到内存中，生成 Class 对象。
+- **类加载过程**：加载、验证、准备、解析和初始化。
+- **双亲委派模型**：当一个类加载器收到类加载请求时，它首先不会自己去尝试加载这个类，而是把请求委派给父类加载器去完成，依次递归，直到最顶层的类加载器，如果父类加载器无法完成加载请求，子类加载器才会尝试自己去加载。
+
+### 26.类加载器有哪些？
+
+Java 中的类加载器（ClassLoader）负责将类文件加载到 JVM 中，并生成对应的 Class 对象。类加载器主要分为以下几种：
+
+#### 1. 启动类加载器（Bootstrap ClassLoader）
+
+- **描述**：启动类加载器是 JVM 自带的类加载器，用于加载核心类库。
+- **加载范围**：负责加载 `JAVA_HOME/lib` 目录下的核心类库，如 `rt.jar`。
+- **实现**：启动类加载器是用本地代码实现的，并不是一个 Java 类。
+
+#### 2. 扩展类加载器（Extension ClassLoader）
+
+- **描述**：扩展类加载器是由 `sun.misc.Launcher$ExtClassLoader` 实现的，用于加载扩展类库。
+- **加载范围**：负责加载 `JAVA_HOME/lib/ext` 目录下的类库，或者通过 `java.ext.dirs` 系统属性指定的类库。
+- **实现**：扩展类加载器是一个 Java 类，继承自 `ClassLoader`。
+
+#### 3. 应用程序类加载器（Application ClassLoader）
+
+- **描述**：应用程序类加载器是由 `sun.misc.Launcher$AppClassLoader` 实现的，用于加载应用程序的类路径（classpath）下的类。
+- **加载范围**：负责加载用户类路径（classpath）下的类库。
+- **实现**：应用程序类加载器是一个 Java 类，继承自 `ClassLoader`。
+
+#### 4. 自定义类加载器（Custom ClassLoader）
+
+- **描述**：用户可以通过继承 `ClassLoader` 类来创建自定义类加载器，以实现特殊的类加载需求。
+- **加载范围**：由用户定义，可以加载特定路径或特定来源的类库。这种类加载器通常用于加载网络上的类、执行热部署（动态加载和替换应用程序的组件）或为了安全目的自定义类的加载方式。
+- **实现**：自定义类加载器需要继承 `ClassLoader` 类，并重写 `findClass` 方法。
+
+#### 总结-26
+
+- **启动类加载器（Bootstrap ClassLoader）**：加载核心类库，如 `rt.jar`。
+- **扩展类加载器（Extension ClassLoader）**：加载扩展类库，如 `JAVA_HOME/lib/ext` 目录下的类库。
+- **应用程序类加载器（Application ClassLoader）**：加载用户类路径（classpath）下的类库。
+- **自定义类加载器（Custom ClassLoader）**：用户可以通过继承 `ClassLoader` 类来创建自定义类加载器，以实现特殊的类加载需求。
+
+### 27.能说一下类的生命周期吗？
+
+Java 类的生命周期包括以下几个阶段：加载（Loading）、验证（Verification）、准备（Preparation）、解析（Resolution）、初始化（Initialization）、使用（Using）和卸载（Unloading）。每个阶段都有特定的任务和作用。
+
+#### 1. 加载（Loading）
+
+**加载**是指将类的字节码从不同的来源（如文件系统、网络等）加载到内存中，并创建一个 Class 对象来表示这个类。
+
+- **类加载器（ClassLoader）**：负责加载类的字节码。Java 提供了几种默认的类加载器，如启动类加载器、扩展类加载器和应用程序类加载器。
+
+#### 2. 验证（Verification）
+
+**验证**是指确保类的字节码符合 JVM 规范，保证代码的安全性和正确性。
+
+- **字节码验证**：检查字节码的格式和结构是否正确。
+- **符号引用验证**：检查符号引用是否能被正确解析。
+- **数据类型验证**：检查数据类型是否匹配。
+
+#### 3. 准备（Preparation）
+
+**准备**是指为类的静态变量分配内存，并将其初始化为默认值。
+
+- **静态变量初始化**：将静态变量初始化为默认值（如 `0`、`null` 等）。
+
+#### 4. 解析（Resolution）
+
+**解析**是指将类的符号引用转换为直接引用。
+
+- **符号引用**：在类的字节码中使用的符号名称。
+- **直接引用**：在内存中指向实际对象的引用。
+
+#### 5. 初始化（Initialization）
+
+**初始化**是指对类的静态变量赋予正确的初始值，并执行类的静态代码块。
+
+- **静态变量赋值**：将静态变量赋予正确的初始值。
+- **静态代码块执行**：执行类中的静态代码块。
+
+#### 6. 使用（Using）
+
+**使用**是指类在程序中被实际使用的阶段。
+
+- **实例化对象**：创建类的实例对象。
+- **调用方法**：调用类的方法。
+
+#### 7. 卸载（Unloading）
+
+**卸载**是指类在 JVM 中被卸载，释放其占用的内存。
+
+- **类卸载条件**：类的所有实例都被回收，且没有任何对该类的引用。
+- **类卸载过程**：JVM 的垃圾回收器负责类的卸载。
+
+以下是一个简单的类生命周期示例：
+
+```java
+public class Test {
+    static {
+        System.out.println("Static block executed");
+    }
+
+    public static int value = 42;
+
+    public static void main(String[] args) {
+        System.out.println("Value: " + Test.value);
+    }
+}
+```
+
+在这个示例中，类的生命周期如下：
+
+1. **加载**：ClassLoader加载 `Test` 类的字节码，并创建一个 Class 对象。
+2. **验证**：验证 `Test` 类的字节码是否符合 JVM 规范。
+3. **准备**：为 `Test` 类的静态变量 `value` 分配内存，并将其初始化为默认值 `0`。
+4. **解析**：将 `Test` 类的符号引用转换为直接引用。
+5. **初始化**：
+   - **静态变量赋值**：将静态变量 `value` 赋值为 `42`。
+   - **静态代码块执行**：执行静态代码块，输出 "Static block executed"。
+6. **使用**：在 `main` 方法中使用 `Test` 类，输出 "Value: 42"。
+7. **卸载**：当 `Test` 类的所有实例都被回收，且没有任何对该类的引用时，JVM 的垃圾回收器会卸载 `Test` 类。
+
+#### 总结-27
+
+- **加载（Loading）**：将类的字节码加载到内存中，并创建 Class 对象。
+- **验证（Verification）**：确保类的字节码符合 JVM 规范，保证代码的安全性和正确性。
+- **准备（Preparation）**：为类的静态变量分配内存，并将其初始化为默认值。
+- **解析（Resolution）**：将类的符号引用转换为直接引用。
+- **初始化（Initialization）**：对类的静态变量赋予正确的初始值，并执行静态代码块。
+- **使用（Using）**：类在程序中被实际使用的阶段。
+- **卸载（Unloading）**：类在 JVM 中被卸载，释放其占用的内存。
+
+### 28.什么是双亲委派模型？
+
+双亲委派模型（Parent Delegation Model）是 Java 类加载机制中的一个重要概念。这种模型指的是一个类加载器在尝试加载某个类时，首先会将加载任务委托给其父类加载器去完成。
+
+只有当父类加载器无法完成这个加载请求（即它找不到指定的类）时，子类加载器才会尝试自己去加载这个类。
+
+- 当一个类加载器需要加载某个类时，它首先会请求其父类加载器加载这个类。
+- 这个过程会一直向上递归，也就是说，从子加载器到父加载器，再到更上层的加载器，一直到最顶层的启动类加载器（Bootstrap ClassLoader）。
+- 启动类加载器会尝试加载这个类。如果它能够加载这个类，就直接返回；如果它不能加载这个类（因为这个类不在它的搜索范围内），就会将加载任务返回给委托它的子加载器。
+- 子加载器接着尝试加载这个类。如果子加载器也无法加载这个类，它就会继续向下传递这个加载任务，依此类推。
+- 这个过程会继续，直到某个加载器能够加载这个类，或者所有加载器都无法加载这个类，最终抛出 ClassNotFoundException。
+
+### 29.为什么要用双亲委派模型？
+
+可以为 Java 应用程序的运行提供一致性和安全性的保障。
+
+①、保证 Java 核心类库的类型安全
+
+如果自定义类加载器优先加载一个类，比如说自定义的 Object，那在 Java 运行时环境中就存在多个版本的 java.lang.Object，双亲委派模型确保了 Java 核心类库的类加载工作由启动类加载器统一完成，从而保证了 Java 应用程序都是使用的同一份核心类库。
+
+②、避免类的重复加载
+
+在双亲委派模型中，类加载器会先委托给父加载器尝试加载类，这样同一个类不会被加载多次。如果没有这种模型，可能会导致同一个类被不同的类加载器重复加载到内存中，造成浪费和冲突。
+
+### 30.如何破坏双亲委派机制？
+
+在某些情况下，可能需要破坏双亲委派机制来实现特定的功能，例如加载不同版本的类或实现插件系统。破坏双亲委派机制的常见方法是自定义类加载器，并重写 `loadClass` 方法，使其不再委托给父类加载器。
+
+#### 示例：自定义类加载器
+
+以下是一个自定义类加载器的示例，通过重写 `loadClass` 方法来破坏双亲委派机制：
+
+```java
+public class CustomClassLoader extends ClassLoader {
+    @Override
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
+        // 如果类名以 "java." 开头，仍然使用父类加载器加载
+        if (name.startsWith("java.")) {
+            return super.loadClass(name);
+        }
+
+        // 尝试查找已经加载的类
+        Class<?> loadedClass = findLoadedClass(name);
+        if (loadedClass != null) {
+            return loadedClass;
+        }
+
+        try {
+            // 自定义加载类的逻辑，例如从文件系统或网络加载类的字节码
+            byte[] classData = loadClassData(name);
+            if (classData != null) {
+                return defineClass(name, classData, 0, classData.length);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        // 如果自定义加载失败，仍然使用父类加载器加载
+        return super.loadClass(name);
+    }
+
+    private byte[] loadClassData(String name) {
+        // 自定义类加载逻辑，例如从文件系统或网络加载类的字节码
+        // 这里仅作为示例，实际实现需要根据需求编写
+        return null;
+    }
+
+    public static void main(String[] args) throws ClassNotFoundException {
+        CustomClassLoader customClassLoader = new CustomClassLoader();
+        Class<?> clazz = customClassLoader.loadClass("Test");
+        System.out.println("Class loaded: " + clazz.getName());
+    }
+}
+```
+
+#### 解释
+
+1. **重写 `loadClass` 方法**：在自定义类加载器中重写 `loadClass` 方法，控制类加载的逻辑。
+2. **条件判断**：如果类名以 "java." 开头，仍然使用父类加载器加载，以确保核心类库的安全性。
+3. **查找已加载的类**：首先尝试查找已经加载的类，避免重复加载。
+4. **自定义加载逻辑**：实现自定义的类加载逻辑，例如从文件系统或网络加载类的字节码。
+5. **定义类**：使用 `defineClass` 方法将字节码转换为 Class 对象。
+6. **回退机制**：如果自定义加载失败，仍然使用父类加载器加载。
+
+#### 总结-30
+
+通过自定义类加载器并重写 `loadClass` 方法，可以破坏双亲委派机制，实现特定的类加载需求。然而，破坏双亲委派机制可能会带来类型安全性和类冲突等问题，因此在实际应用中应谨慎使用。
+
+### 31.Tomcat 的类加载机制了解吗？
+
+Tomcat 是一个流行的 Java Servlet 容器，它的类加载机制在标准的 Java 类加载机制基础上进行了扩展，以支持多应用程序的隔离和热部署。Tomcat 的类加载机制主要包括以下几个类加载器：
+
+#### 1. 启动类加载器（Bootstrap  ClassLoader）
+
+- **描述**：负责加载 JDK 核心类库（如 `rt.jar`）。
+- **加载范围**：`$JAVA_HOME/lib` 目录下的类库。
+
+#### 2. 系统类加载器（System ClassLoader）
+
+- **描述**：负责加载 Tomcat 自身的类库。
+- **加载范围**：`$CATALINA_HOME/lib` 目录下的类库。
+
+#### 3. 公共类加载器（Common ClassLoader）
+
+- **描述**：负责加载所有 Web 应用程序共享的类库。
+- **加载范围**：`$CATALINA_HOME/lib` 目录下的类库。
+
+#### 4. Web 应用程序类加载器（WebappClassLoader）
+
+- **描述**：负责加载特定 Web 应用程序的类库。
+- **加载范围**：`WEB-INF/classes` 和 `WEB-INF/lib` 目录下的类库。
+
+#### 5. 自定义类加载器（Custom ClassLoader）
+
+- **描述**：用户可以通过配置自定义类加载器，以实现特定的类加载需求。
+
+#### 类加载器的层次结构
+
+Tomcat 的类加载器层次结构如下：
+
+1. **启动类加载器（Bootstrap ClassLoader）**
+2. **系统类加载器（System ClassLoader）**
+3. **公共类加载器（Common ClassLoader）**
+4. **Web 应用程序类加载器（WebappClassLoader）**
+
+#### 类加载顺序
+
+1. **启动类加载器**：首先由启动类加载器加载 JDK 核心类库。
+2. **系统类加载器**：然后由系统类加载器加载 Tomcat 自身的类库。
+3. **公共类加载器**：接着由公共类加载器加载所有 Web 应用程序共享的类库。
+4. **Web 应用程序类加载器**：最后由 Web 应用程序类加载器加载特定 Web 应用程序的类库。
+
+Tomcat 实际上也是破坏了双亲委派模型的。
+
+Tomact 是 web 容器，可能需要部署多个应用程序。不同的应用程序可能会依赖同一个第三方类库的不同版本，但是不同版本的类库中某一个类的全路径名可能是一样的。如多个应用都要依赖 hollis.jar，但是 A 应用需要依赖 1.0.0 版本，但是 B 应用需要依赖 1.0.1 版本。这两个版本中都有一个类是 com.hollis.Test.class。如果采用默认的双亲委派类加载机制，那么无法加载多个相同的类。
+
+所以，Tomcat 破坏了双亲委派原则，提供隔离的机制，为每个 web 容器单独提供一个 WebAppClassLoader 加载器。每一个 WebAppClassLoader 负责加载本身的目录下的 class 文件，加载不到时再交 CommonClassLoader 加载，这和双亲委派刚好相反。
+
+### 32.你觉得应该怎么实现一个热部署功能？
+
+实现热部署功能通常涉及以下几个步骤：
+
+1. **监控文件变化**：监控应用程序的文件系统，检测到文件变化时触发相应的操作。
+2. **卸载旧类**：卸载旧的类和资源，释放内存。
+3. **加载新类**：加载新的类和资源，替换旧的类。
+4. **重启应用**：在不重启整个服务器的情况下，重启应用程序。
+
+#### 1. 监控文件变化
+
+可以使用 Java 的 `WatchService` API 来监控文件系统的变化。
+
+```java
+import java.nio.file.*;
+
+public class FileWatcher implements Runnable {
+    private final Path path;
+
+    public FileWatcher(Path path) {
+        this.path = path;
+    }
+
+    @Override
+    public void run() {
+        try (WatchService watchService = FileSystems.getDefault().newWatchService()) {
+            path.register(watchService, StandardWatchEventKinds.ENTRY_MODIFY);
+
+            while (true) {
+                WatchKey key = watchService.take();
+                for (WatchEvent<?> event : key.pollEvents()) {
+                    if (event.kind() == StandardWatchEventKinds.ENTRY_MODIFY) {
+                        System.out.println("File modified: " + event.context());
+                        // 触发热部署操作
+                        reloadApplication();
+                    }
+                }
+                key.reset();
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void reloadApplication() {
+        // 实现热部署逻辑
+    }
+
+    public static void main(String[] args) {
+        Path path = Paths.get("/path/to/your/application");
+        FileWatcher fileWatcher = new FileWatcher(path);
+        new Thread(fileWatcher).start();
+    }
+}
+```
+
+#### 2. 卸载旧类
+
+使用自定义类加载器来加载和卸载类。可以通过将类加载器设置为 `null` 并调用垃圾回收器来卸载旧的类。
+
+```java
+public class CustomClassLoader extends ClassLoader {
+    // 自定义类加载逻辑
+}
+
+public class ApplicationReloader {
+    private CustomClassLoader classLoader;
+
+    public void reload() {
+        // 卸载旧类
+        if (classLoader != null) {
+            classLoader = null;
+            System.gc();
+        }
+
+        // 加载新类
+        classLoader = new CustomClassLoader();
+        // 重新初始化应用程序
+        initializeApplication();
+    }
+
+    private void initializeApplication() {
+        // 初始化应用程序逻辑
+    }
+}
+```
+
+#### 3. 加载新类
+
+使用自定义类加载器加载新的类和资源。
+
+```java
+public class CustomClassLoader extends ClassLoader {
+    @Override
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
+        // 自定义加载类的逻辑
+        return super.loadClass(name);
+    }
+}
+```
+
+#### 4. 重启应用
+
+在不重启整个服务器的情况下，重启应用程序。
+
+```java
+public class ApplicationReloader {
+    private CustomClassLoader classLoader;
+
+    public void reload() {
+        // 卸载旧类
+        if (classLoader != null) {
+            classLoader = null;
+            System.gc();
+        }
+
+        // 加载新类
+        classLoader = new CustomClassLoader();
+        // 重新初始化应用程序
+        initializeApplication();
+    }
+
+    private void initializeApplication() {
+        // 初始化应用程序逻辑
+    }
+}
+```
+
+#### 总结-32
+
+1. **监控文件变化**：使用 `WatchService` API 监控文件系统的变化。
+2. **卸载旧类**：使用自定义类加载器并通过垃圾回收器卸载旧的类。
+3. **加载新类**：使用自定义类加载器加载新的类和资源。
+4. **重启应用**：在不重启整个服务器的情况下，重启应用程序。
+
+通过这些步骤，可以实现一个基本的热部署功能。需要注意的是，热部署可能会带来一些复杂性和潜在的问题，如类冲突和内存泄漏等，因此在实际应用中应谨慎使用。
+
+### 33.解释执行和编译执行的区别?
+
+解释执行和编译执行是两种不同的程序执行方式，它们在执行流程、性能和适用场景等方面存在显著差异。
+
+#### 解释执行
+
+**解释执行**是指程序在运行时由解释器逐行读取源代码，并将其转换为机器码执行。
+
+- **执行流程**：
+  1. **逐行读取**：解释器逐行读取源代码。
+  2. **逐行翻译**：每读取一行代码，立即将其翻译为机器码并执行。
+  3. **即时执行**：翻译后的机器码立即执行，不生成独立的可执行文件。
+
+- **优点**：
+  - **跨平台**：源代码可以在不同平台上运行，只需提供相应平台的解释器。
+  - **调试方便**：可以逐行执行代码，便于调试和测试。
+
+- **缺点**：
+  - **性能较低**：每次执行都需要重新翻译代码，执行速度较慢。
+  - **依赖解释器**：需要解释器的支持，不能生成独立的可执行文件。
+
+- **适用场景**：
+  - **脚本语言**：如 Python、JavaScript、Ruby 等。
+  - **开发和调试**：需要频繁修改和测试代码的场景。
+
+#### 编译执行
+
+**编译执行**是指程序在运行前由编译器将源代码一次性翻译为机器码，生成独立的可执行文件，然后由操作系统加载执行。
+
+- **执行流程**：
+  1. **编译**：编译器将源代码一次性翻译为机器码，生成可执行文件。
+  2. **链接**：将生成的机器码与库文件链接，生成最终的可执行文件。
+  3. **执行**：操作系统加载并执行生成的可执行文件。
+
+- **优点**：
+  - **性能较高**：编译后的机器码直接执行，执行速度较快。
+  - **独立性强**：生成独立的可执行文件，不依赖编译器或解释器。
+
+- **缺点**：
+  - **跨平台性差**：编译后的可执行文件只能在特定平台上运行。
+  - **调试不便**：需要重新编译整个程序，调试和测试较为繁琐。
+
+- **适用场景**：
+  - **系统编程**：如 C、C++ 等语言，用于开发操作系统、驱动程序等。
+  - **性能要求高**：需要高性能执行的场景，如游戏开发、科学计算等。
+
+#### Java 的混合模式
+
+Java 采用了一种混合模式，结合了解释执行和编译执行的优点。
+
+- **解释执行**：Java 源代码首先被编译为字节码（`.class` 文件），由 JVM 的解释器逐行解释执行。
+- **即时编译（JIT）**：JVM 在运行时将热点代码（执行频繁的代码）编译为机器码，提高执行效率。
+
+#### 总结-33
+
+- **解释执行**：
+  - **逐行读取和翻译**：逐行读取源代码并翻译为机器码执行。
+  - **优点**：跨平台、调试方便。
+  - **缺点**：性能较低、依赖解释器。
+  - **适用场景**：脚本语言、开发和调试。
+
+- **编译执行**：
+  - **一次性翻译**：将源代码一次性翻译为机器码，生成可执行文件。
+  - **优点**：性能较高、独立性强。
+  - **缺点**：跨平台性差、调试不便。
+  - **适用场景**：系统编程、性能要求高的场景。
+
+- **Java 的混合模式**：结合了解释执行和编译执行的优点，通过解释执行和即时编译（JIT）提高执行效率。
+
+通过理解解释执行和编译执行的区别，可以更好地选择适合的编程语言和执行方式，优化程序性能和开发效率。
